--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div id="sobre">
                     <h3>Full&nbsp;Stack&nbsp;Web&nbsp;Developer&nbsp;~&nbsp;Security&nbsp;Enthusiast</h3>
                 </div>
-            <h2>About&nbsp;me </h2>
-            <p>My name is Andrey Couto Alves. I currently live in Espirito Santo, Brazil. Im a full stack web
+           <!-- <h2>About&nbsp;me </h2>
+            <p>My name isAndrey Couto Alves. I currently live in Espirito Santo, Brazil. Im a full stack web
                 developer and IT student at IFES. <br>
                 at the moment my studies are focused on the area of ​​web development and information
                 security.<br><br>
@@ -44,7 +44,7 @@
                     target="_blank"> <strong> CyberOps Associate </strong></a> certification <br>
                     
 
-            </p>
+            </p>-->
         </div>
     </section>
 
