--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
            <ul class="nav-list">
                 <li><a href="#portfolio" type="button" class="cta" data-aos="fade-left">Projects</a>
                 </li>
-                <li><a href="arquivos/Curriculo - Andrey Couto Alves.pdf" target="_blank" class="cta">Curriculum</a>
+                <li><a href="arquivos/Andrey Couto - Curriculo..pdf" target="_blank" class="cta">Curriculum</a>
                 </li>
                 <li><a href="https://github.com/andreycoutt" target="_blank" class="cta">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/andrey-couto-3a691320a/" target="_blank" class="cta">Linkedin</a></li>
