--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
                 <div class="project-item">
                     <div class="project-info" data-aos="fade-right">
                         <h1>Web Development</h1>
-                        <h2>Nome do aplicativo</h2>
-                        <p>SOBRE O APLICATIVO - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
-                            aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
-                            ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
-                            urna vitae dui.</p>
+                        <h2>PetCare</h2>
+                        <p>E-COMMERCE EM DESENVOLVIMENTO.</p>
+                        <p>Estou construindo um site para Pet Shop</p>
                     </div>
                     <div class="project-img" data-aos="fade-left">
                         <img src="imagens/d.web.jpg" alt="img">
@@ -74,43 +72,45 @@
                 </div>
                 <div class="project-item">
                     <div class="project-info" data-aos="fade-left">
-                        <h1>Mobile Development</h1>
-                        <h2>Nome do aplicativo</h2>
-                        <p>SOBRE O APLICATIVO - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
-                            aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
-                            ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
-                            urna vitae dui.</p>
-                    </div>
-                    <div class="project-img" data-aos="fade-right">
-                        <img src="imagens/d.mob.jpg" alt="img">
-                    </div>
-                </div>
-                <div class="project-item">
-                    <div class="project-info" data-aos="fade-right">
                         <h1>Web Development</h1>
-                        <h2>Nome do Aplicativo</h2>
-                        <p>SOBRE O APLICATIVO - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
-                            aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
-                            ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
-                            urna vitae dui.</p>
-                    </div>
-                    <div class="project-img" data-aos="fade-left">
-                        <img src="imagens/d.web2.png" alt="img">
-                    </div>
-                </div>
-                <div class="project-item">
-                    <div class="project-info" data-aos="fade-left">
-                        <h1>Mobile Development</h1>
-                        <h2>Nome do Aplicativo</h2>
-                        <p>SOBRE O APLICATIVO - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
-                            aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
-                            ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
-                            urna vitae dui.</p>
+                        <h2>Perim Center</h2>
+                        <p>Aplicativo web responsivo para gerenciar as entregas do Supermercado Perim. O aplicativo tem as seguintes funcionalidades: Cadastro de clientes, Cadastro de entregas e Listar as entregas cadastradas, com as opções de editar e/ou excluir cada uma delas. Tecnologias usadas: HTML, CSS, Bootstrap 5, JavaScript, Python e o Framework Django.</p>
                     </div>
                     <div class="project-img" data-aos="fade-right">
-                        <img src="imagens/d.mob2.png" alt="img">
+                        <img src="imagens/perim.PNG" alt="img">
                     </div>
                 </div>
+                <!--
+                    <div class="project-item">
+                        <div class="project-info" data-aos="fade-right">
+                            <h1>Web Development</h1>
+                            <h2>Nome do Aplicativo</h2>
+                            <p>SOBRE O APLICATIVO - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
+                                aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
+                                ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
+                                urna vitae dui.</p>
+                        </div>
+                        <div class="project-img" data-aos="fade-left">
+                            <img src="imagens/d.web2.png" alt="img">
+                        </div>
+                    </div>
+                -->
+                
+                <!--
+                    <div class="project-item">
+                        <div class="project-info" data-aos="fade-left">
+                            <h1>Mobile Development</h1>
+                            <h2>Nome do Aplicativo</h2>
+                            <p>SOBRE O APLICATIVO - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec eros leo. Vestibulum
+                                aliquam vel libero eget porttitor. Nunc nisl nunc, suscipit quis quam ut, congue fermentum
+                                ipsum. In consectetur, leo a accumsan eleifend, tortor leo eleifend nunc, sed pulvinar neque
+                                urna vitae dui.</p>
+                        </div>
+                        <div class="project-img" data-aos="fade-right">
+                            <img src="imagens/d.mob2.png" alt="img">
+                        </div>
+                    </div>
+                -->
 
             </div>
         </div>
