--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                         <h2>PetCare</h2>
                         <p>E-COMMERCE EM DESENVOLVIMENTO.</p>
                         <p>Estou construindo um site para Pet Shop</p>
+                        <br>
+                        <a href="https://github.com/andreycoutt/e-commerce" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"> github</i></a>
                     </div>
                     <div class="project-img" data-aos="fade-left">
                         <img src="imagens/d.web.jpg" alt="img">
@@ -75,6 +77,8 @@
                         <h1>Web Development</h1>
                         <h2>Perim Center</h2>
                         <p>Aplicativo web responsivo para gerenciar as entregas do Supermercado Perim. O aplicativo tem as seguintes funcionalidades: Cadastro de clientes, Cadastro de entregas e Listar as entregas cadastradas, com as opções de editar e/ou excluir cada uma delas. Tecnologias usadas: HTML, CSS, Bootstrap 5, JavaScript, Python e o Framework Django.</p>
+                        <br>
+                        <a href="https://github.com/andreycoutt/PerimCenter" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"> github</i></a>
                     </div>
                     <div class="project-img" data-aos="fade-right">
                         <img src="imagens/perim.PNG" alt="img">
@@ -121,6 +125,7 @@
         </p>
     </footer>
 
+    <script src="https://kit.fontawesome.com/76c7374bc8.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c43f95b4e5.js" crossorigin="anonymous"></script>
     <script src="/node_modules/aos/dist/aos.js"></script>
 
