--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                     <div class="project-info" data-aos="fade-left">
                         <h1>Web Development</h1>
                         <h2>Perim Center</h2>
-                        <p>Aplicativo web responsivo para gerenciar as entregas do Supermercado Perim. O aplicativo tem as seguintes funcionalidades: Cadastro de clientes, Cadastro de entregas e Listar as entregas cadastradas, com as opções de editar e/ou excluir cada uma delas. Tecnologias usadas: HTML, CSS, Bootstrap 5, JavaScript, Python e o Framework Django.</p>
+                        <p>Aplicativo web responsivo para gerenciar as entregas do Supermercado Perim. O aplicativo tem as seguintes funcionalidades: Cadastro de clientes, Cadastro de entregas e Listar as entregas cadastradas, com as opções de editar e/ou excluir cada uma delas. 
+                        <br><br>
+                        <strong>Tecnologias usadas:</strong> HTML, CSS, Bootstrap 5, JavaScript, Python e o Framework Django.</p>
                         <br>
                         <a href="https://github.com/andreycoutt/PerimCenter" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"> github</i></a>
                     </div>
