--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                         <h1>Web Development</h1>
                         <h2>PetCare</h2>
                         <p>E-COMMERCE EM DESENVOLVIMENTO.</p>
-                        <p>Estou construindo um site para Pet Shop</p>
+                        <p>Estou construindo um site para Pet Shop
+                        <br><br>
+                        <strong>Tecnologias usadas:</strong> HTML, CSS, Bootstrap 5, JavaScript, Python e o Framework Django.</p>
                         <br>
                         <a href="https://github.com/andreycoutt/e-commerce" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"> github</i></a>
                     </div>
