--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <a href="https://github.com/andreycoutt/e-commerce" target="_blank"><i class="fa-brands fa-github" style="color: #ffffff;"> github</i></a>
                     </div>
                     <div class="project-img" data-aos="fade-left">
-                        <img src="imagens/d.web.jpg" alt="img">
+                        <img src="imagens/petcare.PNG" alt="img">
                     </div>
                 </div>
                 <div class="project-item">
